include_HEADERS = core/func_common.hpp \
                  core/func_common.inl \
                  core/func_exponential.hpp \
                  core/func_exponential.inl \
                  core/func_geometric.hpp \
                  core/func_geometric.inl \
                  core/func_integer.hpp \
                  core/func_integer.inl \
                  core/func_matrix.hpp \
                  core/func_matrix.inl \
                  core/func_noise.hpp \
                  core/func_noise.inl \
                  core/func_packing.hpp \
                  core/func_packing.inl \
                  core/func_trigonometric.hpp \
                  core/func_trigonometric.inl \
                  core/func_vector_relational.hpp \
                  core/func_vector_relational.inl \
                  core/hint.hpp \
                  core/intrinsic_common.hpp \
                  core/intrinsic_common.inl \
                  core/intrinsic_exponential.hpp \
                  core/intrinsic_exponential.inl \
                  core/intrinsic_geometric.hpp \
                  core/intrinsic_geometric.inl \
                  core/intrinsic_matrix.hpp \
                  core/intrinsic_matrix.inl \
                  core/intrinsic_trigonometric.hpp \
                  core/intrinsic_trigonometric.inl \
                  core/intrinsic_vector_relational.hpp \
                  core/intrinsic_vector_relational.inl \
                  core/setup.hpp \
                  core/type.hpp \
                  core/type_float.hpp \
                  core/type_gentype.hpp \
                  core/type_gentype.inl \
                  core/type_half.hpp \
                  core/type_half.inl \
                  core/type_int.hpp \
                  core/type_mat.hpp \
                  core/type_mat.inl \
                  core/type_mat2x2.hpp \
                  core/type_mat2x2.inl \
                  core/type_mat2x3.hpp \
                  core/type_mat2x3.inl \
                  core/type_mat2x4.hpp \
                  core/type_mat2x4.inl \
                  core/type_mat3x2.hpp \
                  core/type_mat3x2.inl \
                  core/type_mat3x3.hpp \
                  core/type_mat3x3.inl \
                  core/type_mat3x4.hpp \
                  core/type_mat3x4.inl \
                  core/type_mat4x2.hpp \
                  core/type_mat4x2.inl \
                  core/type_mat4x3.hpp \
                  core/type_mat4x3.inl \
                  core/type_mat4x4.hpp \
                  core/type_mat4x4.inl \
                  core/type_size.hpp \
                  core/type_vec.hpp \
                  core/type_vec.inl \
                  core/type_vec1.hpp \
                  core/type_vec1.inl \
                  core/type_vec2.hpp \
                  core/type_vec2.inl \
                  core/type_vec3.hpp \
                  core/type_vec3.inl \
                  core/type_vec4.hpp \
                  core/type_vec4.inl \
                  core/_detail.hpp \
                  core/_fixes.hpp \
                  core/_swizzle.hpp \
                  core/_swizzle_func.hpp \
                  core/_vectorize.hpp \
                  gtc/constants.hpp \
                  gtc/constants.inl \
                  gtc/epsilon.hpp \
                  gtc/epsilon.inl \
                  gtc/half_float.hpp \
                  gtc/half_float.inl \
                  gtc/matrix_access.hpp \
                  gtc/matrix_access.inl \
                  gtc/matrix_integer.hpp \
                  gtc/matrix_inverse.hpp \
                  gtc/matrix_inverse.inl \
                  gtc/matrix_transform.hpp \
                  gtc/matrix_transform.inl \
                  gtc/noise.hpp \
                  gtc/noise.inl \
                  gtc/quaternion.hpp \
                  gtc/quaternion.inl \
                  gtc/random.hpp \
                  gtc/random.inl \
                  gtc/reciprocal.hpp \
                  gtc/reciprocal.inl \
                  gtc/swizzle.hpp \
                  gtc/swizzle.inl \
                  gtc/type_precision.hpp \
                  gtc/type_precision.inl \
                  gtc/type_ptr.hpp \
                  gtc/type_ptr.inl \
                  gtc/ulp.hpp \
                  gtc/ulp.inl \
                  gtx/associated_min_max.hpp \
                  gtx/associated_min_max.inl \
                  gtx/bit.hpp \
                  gtx/bit.inl \
                  gtx/closest_point.hpp \
                  gtx/closest_point.inl \
                  gtx/color_cast.hpp \
                  gtx/color_cast.inl \
                  gtx/color_space.hpp \
                  gtx/color_space.inl \
                  gtx/color_space_YCoCg.hpp \
                  gtx/color_space_YCoCg.inl \
                  gtx/compatibility.hpp \
                  gtx/compatibility.inl \
                  gtx/component_wise.hpp \
                  gtx/component_wise.inl \
                  gtx/constants.hpp \
                  gtx/epsilon.hpp \
                  gtx/euler_angles.hpp \
                  gtx/euler_angles.inl \
                  gtx/extend.hpp \
                  gtx/extend.inl \
                  gtx/extented_min_max.hpp \
                  gtx/extented_min_max.inl \
                  gtx/fast_exponential.hpp \
                  gtx/fast_exponential.inl \
                  gtx/fast_square_root.hpp \
                  gtx/fast_square_root.inl \
                  gtx/fast_trigonometry.hpp \
                  gtx/fast_trigonometry.inl \
                  gtx/gradient_paint.hpp \
                  gtx/gradient_paint.inl \
                  gtx/handed_coordinate_space.hpp \
                  gtx/handed_coordinate_space.inl \
                  gtx/inertia.hpp \
                  gtx/inertia.inl \
                  gtx/integer.hpp \
                  gtx/integer.inl \
                  gtx/intersect.hpp \
                  gtx/intersect.inl \
                  gtx/int_10_10_10_2.hpp \
                  gtx/int_10_10_10_2.inl \
                  gtx/log_base.hpp \
                  gtx/log_base.inl \
                  gtx/matrix_cross_product.hpp \
                  gtx/matrix_cross_product.inl \
                  gtx/matrix_interpolation.hpp \
                  gtx/matrix_interpolation.inl \
                  gtx/matrix_major_storage.hpp \
                  gtx/matrix_major_storage.inl \
                  gtx/matrix_operation.hpp \
                  gtx/matrix_operation.inl \
                  gtx/matrix_query.hpp \
                  gtx/matrix_query.inl \
                  gtx/mixed_product.hpp \
                  gtx/mixed_product.inl \
                  gtx/multiple.hpp \
                  gtx/multiple.inl \
                  gtx/noise.hpp \
                  gtx/norm.hpp \
                  gtx/norm.inl \
                  gtx/normal.hpp \
                  gtx/normal.inl \
                  gtx/normalize_dot.hpp \
                  gtx/normalize_dot.inl \
                  gtx/number_precision.hpp \
                  gtx/number_precision.inl \
                  gtx/ocl_type.hpp \
                  gtx/ocl_type.inl \
                  gtx/optimum_pow.hpp \
                  gtx/optimum_pow.inl \
                  gtx/orthonormalize.hpp \
                  gtx/orthonormalize.inl \
                  gtx/perpendicular.hpp \
                  gtx/perpendicular.inl \
                  gtx/polar_coordinates.hpp \
                  gtx/polar_coordinates.inl \
                  gtx/projection.hpp \
                  gtx/projection.inl \
                  gtx/quaternion.hpp \
                  gtx/quaternion.inl \
                  gtx/random.hpp \
                  gtx/raw_data.hpp \
                  gtx/raw_data.inl \
                  gtx/reciprocal.hpp \
                  gtx/rotate_vector.hpp \
                  gtx/rotate_vector.inl \
                  gtx/simd_mat4.hpp \
                  gtx/simd_mat4.inl \
                  gtx/simd_vec4.hpp \
                  gtx/simd_vec4.inl \
                  gtx/spline.hpp \
                  gtx/spline.inl \
                  gtx/std_based_type.hpp \
                  gtx/std_based_type.inl \
                  gtx/string_cast.hpp \
                  gtx/string_cast.inl \
                  gtx/transform.hpp \
                  gtx/transform.inl \
                  gtx/transform2.hpp \
                  gtx/transform2.inl \
                  gtx/ulp.hpp \
                  gtx/unsigned_int.hpp \
                  gtx/unsigned_int.inl \
                  gtx/vec1.hpp \
                  gtx/vec1.inl \
                  gtx/vector_access.hpp \
                  gtx/vector_access.inl \
                  gtx/vector_angle.hpp \
                  gtx/vector_angle.inl \
                  gtx/vector_query.hpp \
                  gtx/vector_query.inl \
                  gtx/verbose_operator.hpp \
                  gtx/verbose_operator.inl \
                  gtx/wrap.hpp \
                  gtx/wrap.inl \
                  virtrev/xstream.hpp \
                  ext.hpp \
                  glm.hpp
